[package]
name = "amap"
version = "0.1.2"
authors = ["bend-n <bend.n@outlook.com>"]
description = "define `[Option<T>; N]` easily"
edition = "2021"
repository = "https://github.com/bend-n/amap.git"
license = "MIT"

[dependencies]
quote = "1.0.32"
syn = { version = "2.0.15", features = ["full"] }

[lib]
proc_macro = true
